--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
 		"@distube/ytdl-core": "^4.16.4",
 		"@robojs/patch": "^0.1.1",
 		"@robojs/server": "^0.5.7",
+		"@tailwindcss/vite": "^4.0.9",
 		"discord.js": "^14.16.2",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"robo.js": "^0.10.15"
+		"robo.js": "^0.10.15",
+		"tailwindcss": "^4.0.9"
 	},
 	"devDependencies": {
 		"@swc/core": "^1.7.26",
