--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"@distube/ytdl-core": "^4.16.4",
 		"@robojs/patch": "^0.1.1",
 		"@robojs/server": "^0.5.7",
+		"@robojs/sync": "^0.1.3",
 		"@tailwindcss/vite": "^4.0.9",
 		"discord.js": "^14.16.2",
 		"react": "^18.3.1",
